# sampo

./: .gitignore  ARCHITECTURE.md  ENCODING.md  FPGA.md  HISTORY.md  README.md  SOURCE.md
examples/: equ_test.s  hello.s  simple.s
rtl/: __init__.py  alu.py  cpu.py  decode.py  opcodes.py  pyproject.toml  regfile.py  soc.py  test_cpu.py
sasm/: Cargo.toml
sasm/src/: codegen.rs  lexer.rs  main.rs  parser.rs
semu/: Cargo.toml
semu/src/: cpu.rs  main.rs  tui.rs
